base/mediamtx/resources/token-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mediamtx-token
  namespace: mediamtx
spec:
  selector:
    app: mediamtx-token
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
